<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBasePaguina"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp">

            <ImageButton
                android:id="@+id/FlotanteSalir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:background="#00FFFFFF"
                android:contentDescription="@string/DescrpcionbtnSalir"
                android:scaleType="fitStart"
                android:src="@drawable/ic_baseline_cancel_24"
                tools:src="@drawable/ic_baseline_cancel_24"
                tools:srcCompat="@drawable/ic_baseline_cancel_24" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/FlotanteCodigo" />

            <EditText
                android:id="@+id/flotanteCodigo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/ic_edit_text_personalizado"
                android:drawableStart="@drawable/ic_baseline_vpn_key_24"
                android:drawablePadding="5dp"
                android:drawingCacheQuality="auto"
                android:ems="10"
                android:hint="@string/Codigo"
                android:importantForAutofill="no"
                android:inputType="number"
                android:padding="10dp"
                android:textSize="14sp" />

            <Button
                android:id="@+id/FlotantebtnCOnsultCodigo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_botones_personalizados"
                android:text="@string/contentMain_btnConsultarCodigo"
                android:textColor="#FFFFFF" />

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>