<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"


    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ListarSpinerActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorBase"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/ic_edit_text_personalizado" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/colorBasePaguina"
                android:paddingTop="10dp"
                android:paddingBottom="10dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawablePadding="5dp"
                        android:padding="10dp"
                        android:text="@string/SpinnerCodigo"
                        android:textSize="18sp"
                        app:drawableStartCompat="@drawable/ic_baseline_vpn_key_24" />

                    <TextView
                        android:id="@+id/SpinCodigo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Null"
                        android:textSize="18sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawablePadding="5dp"
                        android:padding="10dp"
                        android:text="@string/SpinnerDescrip"
                        android:textSize="18sp"
                        app:drawableStartCompat="@drawable/ic_baseline_description_24" />

                    <TextView
                        android:id="@+id/SpinDescrip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Null"
                        android:textSize="18sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawablePadding="5dp"
                        android:padding="10dp"
                        android:text="@string/SpinnerPrecio"
                        android:textSize="18sp"
                        app:drawableStartCompat="@drawable/ic_baseline_attach_money_24" />

                    <TextView
                        android:id="@+id/SpinPrecio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Null"
                        android:textSize="18sp" />
                </TableRow>

            </TableLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>